1、新增配置项：server.thread.virtual默认true 2、新增配置项：server.thread.count 仅在1的值配为false时才生效